put try catch for sql exceptions